# tonic-hello

./: Cargo.toml  build.rs
k6/: test.js
proto/: hello.proto
src/: main.rs
